2000-04-25  Dan Winship  <danw@helixcode.com>

	* mail-format.c (reply_body): Fix some bugs that crept into reply
	generation. This needs a lot more work to deal correctly with
	complicated bodies.

	* mail-display.c, mail-format.c: Redo large chunks of this. The
	mail display now consists of a vbox in a scrolled window, in which
	we put multiple GtkHTML objects. This means broken HTML in one
	part can't corrupt other parts. The headers now scroll with the
	body. Unrecognized attachments look prettier, but still don't do
	anything, and will probably be changed later. We can also now
	display nested message/rfc822 parts and multipart/alternatives
	with multipart subparts. Oh, and text/{richtext,enriched}, since
	we had all these ancient sample messages that use it and the lack
	of support annoyed me. :)

	Bonobo embeddables are broken right now, but I don't think that's
	my fault.

2000-04-23  Dan Winship  <danw@helixcode.com>

	* folder-browser-factory.c: rename "send" to "send_msg", to avoid
	name clash with the tcp function. Connect the "forward" button.

	* mail-ops.c: rename "send" to "send_msg", to avoid name clash
	with the tcp function. Add forward_msg function.

	* mail-format.c (mail_generate_forward): support function for
	forward_msg. Pretty much a big kludge right now, pending the
	attachment/attachment-bar changes.

2000-04-22  Dan Winship  <danw@helixcode.com>

	* mail-display.c (on_url_requested): Change cid expectations to
	match current camel reality.

	* main.c (main): call glade_gnome_init, for composer.

	* folder-browser-factory.c: move msg_composer_cb and
	msg_composer_send_cb to mail-ops. Attach send, reply, and "reply
	to all" buttons.

	* mail-ops.c (composer_send_cb, send): moved from
	folder-browser-factory.c.
	(reply_to_sender, reply_to_all): new functions to do replies.

	* mail-format.c (text_to_html): Add an "add_pre" flag, to make
	it wrap the output in <pre></pre>.
	(mail_generate_reply): New function to create a composer and build